--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -118,7 +118,7 @@
     </div>
 
     <div class="footer">
-        <p>© 2025 Intruder Detection System | Built with Flask & OpenCV</p>
+        <p>© 2025 Mjay's Intruder Detection System | Built with Flask & OpenCV</p>
     </div>
 
     <script>
